# sensevoice-cli

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  frontend.rs  main.rs  onnx.rs  sensevoice.rs  vad.rs
