[package]
license = "MIT"
categories = ["command-line-utilities"]
name = "sensevoice-cli"
version = "0.1.8"
authors = ["jinti <shenjindi@fourz.cn>"]
edition = "2021"
keywords = ["sensevoice", "developer", "asr", "cli", "onnx"]
description = "cli tool for speech recognition using sensevoice-small, by restsend.com"
repository = "https://github.com/restsend/sensevoice-cli"


[features]
opus = ["dep:opus"]
default = ["opus"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio decode
symphonia = { version = "0.5", features = [
    "mp3",
    "wav",
    "ogg",
    "flac",
    "vorbis",
] }
opus = { version = "0.3", optional = true }
# Math / arrays (keep in sync with ort 2.0.0-rc.10 -> ndarray 0.16)
ndarray = { version = "0.16.1" }
realfft = "3.3"
rustfft = "6.2"
num-complex = "0.4"
hf-hub = { version = "0.4.3", default-features = false, features = [
    "rustls-tls",
    "tokio",
    "ureq",
] }
humantime = "2.1"
once_cell = "1.19"
# ONNX Runtime via ort crate (pinned prerelease due to registry mirror)
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
ort-sys = { version = "2.0.0-rc.10" }
knf-rs-sys = "0.3.2"
ureq = { version = "2" }


[profile.release]
strip = true
